# nfc-detect

./: AUTHORS  README.md  analyze.py  pyproject.toml
src/nfcdetect/: __main__.py  classifier.py  config.py  dataset.py  model.py  padding.py  preprocessor.py
