[tool.poetry]
name = "nfc-detect"
version = "0.1.0"
description = "Tool to train a model to detect nocturnal flight calls of migratory birds."
authors = ["Yoshikiyo Kato <ykt.bird@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "nfcdetect", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
librosa = "^0.10.1"
birdnetlib = "^0.16.0"
joblib = "^1.4.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
pydantic = "^2.7.0"
tensorflow = "^2.16.1"
tensorflow-hub = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
